--- a/wiki/Source.wiki
+++ b/wiki/Source.wiki
@@ -1,5 +1,5 @@
-!S3Lib-Java's primary repository is now maintained via github:
+!S3Lib-Java's repository is now hosted on github:
   http://github.com/landonf/s3lib-java/tree/master
 
-!S3Lib-C has not yet been migrated:
+!S3Lib-C is hosted on Google Code:
   http://code.google.com/p/s3lib/source/checkout
