--- a/wiki/Source.wiki
+++ b/wiki/Source.wiki
@@ -1,5 +1,5 @@
 == !S3Lib Java ==
-The java library is now hosted on github:
+As an expirement in encouraging "social development", the java library is now hosted on github:
   http://github.com/landonf/s3lib-java/tree/master
 
 == !S3Lib C ==
